[package]
name = "js-snippets"
version = "0.1.0"
edition = "2021"
rust-version = "1.86.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = { version = "0.9.1", features = ["suspense"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["HtmlInputElement"] }
